--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "gst-plugins-bad"]
 	path = gst-plugins-bad
-	url = git://anongit.freedesktop.org/gstreamer/gst-plugins-bad
+	url = https://git.sailfishos.org/mirror/gst-plugins-bad.git
