--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "gst-plugins-bad"]
-	path = gst-plugins-bad
-	url = https://github.com/sailfishos-mirror/gst-plugins-bad.git
+[submodule "gstreamer"]
+	path = gstreamer
+	url = https://github.com/sailfishos-mirror/gstreamer.git
